fixed Email and button overlap issue, gs-1036 (#856)

--- a/styles/Groupshop.module.scss
+++ b/styles/Groupshop.module.scss
@@ -2705,7 +2705,7 @@ $font-family-sans-serif: "DM Sans", Fahkwang, system-ui, -apple-system,
   &_shopping_box_mobile {
     position: fixed;
     right: 15px;
-    bottom: 15px;
+    bottom: 60px;
     z-index: 999;
 
     button {
